--- a/src/style.css
+++ b/src/style.css
@@ -17,10 +17,10 @@ body {
 }
 
 .home-bar {
-  width: 410px;
-  height: 475px;
+  width: 460px;
+  height: 550px;
   position: absolute;
-  z-index: 1;
-  display: flex;
-  align-self: center;
+  z-index: 10;
+  font-family: Tahoma, sans-serif;
+  bottom: 39px;
 }
