--- a/src/style.css
+++ b/src/style.css
@@ -25,9 +25,32 @@ body {
 
 .home-bar {
   width: 460px;
-  height: 550px;
+  height: 600px;
   position: absolute;
   z-index: 10;
   font-family: 'WindowsXPTahoma', sans-serif;
   bottom: 39px;
+}
+
+.hide-menu-enter-from {
+  opacity: 0;
+  transform: translateY(39px);
+}
+.hide-menu-enter-to {
+  opacity: 1;
+  transform: translateY(0);
+}
+
+.hide-menu-leave-from {
+  opacity: 1;
+  transform: translateY(0);
+}
+.hide-menu-leave-to {
+  opacity: 0;
+  transform: translateY(39px);
+}
+
+.hide-menu-enter-active,
+.hide-menu-leave-active {
+  transition: opacity 0.3s ease, transform 0.3s ease;
 }
