--- a/src/style.css
+++ b/src/style.css
@@ -13,14 +13,14 @@ body {
 
 .desktop-grid {
   display: grid;
-  grid-template-columns: repeat(auto-fit, 75px);
-  grid-auto-rows: 75px;
+  grid-template-columns: repeat(auto-fill, 75px);
+  grid-template-rows: repeat(7, 1fr);
   width: 100vw;
   height: calc(100vh - 50px);
-  overflow: hidden;
   column-gap: 26px;
+  row-gap: 0px;
   justify-content: start;
-  align-content: space-evenly;
+  align-items: start;
 }
 
 .home-bar {
@@ -57,7 +57,7 @@ body {
 
 .minimize-window-enter-from {
   opacity: 0;
-  transform: scale(0.5) translateY(40px);
+  transform: scale(0.5) translateY(400px);
 }
 .minimize-window-enter-to {
   opacity: 1;
@@ -70,7 +70,7 @@ body {
 }
 .minimize-window-leave-to {
   opacity: 0;
-  transform: scale(0.5) translateY(40px);
+  transform: scale(0.5) translateY(400px);
 }
 
 .minimize-window-enter-active,
